--- a/FrontEnd/user_management.html
+++ b/FrontEnd/user_management.html
@@ -46,7 +46,7 @@
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="User_data">
                     <tr>
                         
                     </tr>
